--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,21 @@
 {
   "env": {
+    "node":{
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "targets":{
+              "node":"current"
+            }
+          }
+        ],
+        "@babel/preset-react"
+      ],
+      "plugins": [
+        "@babel/plugin-proposal-class-properties"
+      ]
+    },
     "development": {
       "presets": [
         [
@@ -15,6 +31,9 @@
           }
         ],
         "@babel/preset-react"
+      ],
+      "plugins": [
+        "@babel/plugin-proposal-class-properties"
       ]
     }
   }
