--- a/package.json
+++ b/package.json
@@ -4,24 +4,30 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
-    "babel-loader": "^8.1.0",
-    "koa-static": "^5.0.0",
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-react": "^7.7.4",
+    "babel-loader": "^8.0.6",
+    "chalk": "^3.0.0",
     "koa2": "^2.0.0-alpha.7",
-    "koa2-static": "^1.0.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "npm-run-all": "^4.1.5",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "supervisor": "^0.12.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-node-externals": "^1.7.2",
+    "xl_close_port": "^1.0.1",
+    "koa-static": "^5.0.0",
+    "cross-env": "^6.0.3"
   },
   "devDependencies": {},
   "scripts": {
-    "dev": "webpack --config ./webpack/webpack.dev.config.js",
-    "babel-node": "babel  src -d dist/src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node webpack/scripts/start.js",
+    "fe:watch": "webpack --config  ./webpack/webpack.dev.config.js --watch",
+    "svr:watch": "node ./webpack/scripts/svr-code-watch.js"
   },
   "keywords": [],
   "author": "",
