--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
     "chalk": "^3.0.0",
+    "cross-env": "^6.0.3",
+    "koa-static": "^5.0.0",
     "koa2": "^2.0.0-alpha.7",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "supervisor": "^0.12.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-node-externals": "^1.7.2",
-    "xl_close_port": "^1.0.1",
-    "koa-static": "^5.0.0",
-    "cross-env": "^6.0.3"
+    "xl_close_port": "^1.0.1"
   },
   "devDependencies": {},
   "scripts": {
