--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.0.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "supervisor": "^0.12.0",
