--- a/.babelrc
+++ b/.babelrc
@@ -13,7 +13,8 @@
         "@babel/preset-react"
       ],
       "plugins": [
-        "@babel/plugin-proposal-class-properties"
+        "@babel/plugin-proposal-class-properties",
+        "./webpack/babel/plugin/no-require-css"
       ]
     },
     "development": {
@@ -33,7 +34,8 @@
         "@babel/preset-react"
       ],
       "plugins": [
-        "@babel/plugin-proposal-class-properties"
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-transform-runtime"
       ]
     }
   }
