--- a/package.json
+++ b/package.json
@@ -6,23 +6,32 @@
   "dependencies": {
     "@babel/cli": "^7.7.4",
     "@babel/core": "^7.7.4",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.6",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
+    "autoprefixer": "^9.7.6",
     "babel-loader": "^8.0.6",
     "chalk": "^3.0.0",
     "cross-env": "^6.0.3",
+    "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
     "koa-static": "^5.0.0",
     "koa2": "^2.0.0-alpha.7",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
+    "postcss-loader": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
     "supervisor": "^0.12.0",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
+    "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^1.7.2",
     "xl_close_port": "^1.0.1"
   },
