--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.0.6",
     "chalk": "^3.0.0",
+    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^6.0.3",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
@@ -21,23 +22,32 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "pm2": "^4.4.0",
     "postcss-loader": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-hot-loader": "^4.12.21",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "supervisor": "^0.12.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.11",
+    "webpack-manifest-plugin": "^2.2.0",
     "webpack-node-externals": "^1.7.2",
     "xl_close_port": "^1.0.1"
   },
   "devDependencies": {},
   "scripts": {
     "dev": "node webpack/scripts/start.js",
+    "build": "NODE_ENV=production npm run client:build && npm run server:build",
+    "client:build": "NODE_ENV=production webpack --config  ./webpack/webpack.prod.config.js",
+    "server:build": "NODE_ENV=production webpack --config  ./webpack/webpack.server.config.js",
+    "prod:start": "node ./dist/server/app.js",
     "fe:watch": "webpack --config  ./webpack/webpack.dev.config.js --watch",
     "svr:watch": "node ./webpack/scripts/svr-code-watch.js"
   },
