--- a/package.json
+++ b/package.json
@@ -28,20 +28,22 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
-    "react-hot-loader": "^4.12.21",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "supervisor": "^0.12.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
+    "uglifyjs-webpack-plugin": "1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.11",
     "webpack-manifest-plugin": "^2.2.0",
     "webpack-node-externals": "^1.7.2",
     "xl_close_port": "^1.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "react-hot-loader": "^4.12.21",
+    "webpack-dev-server": "^3.10.3"
+  },
   "scripts": {
     "dev": "node webpack/scripts/start.js",
     "build": "NODE_ENV=production npm run client:build && npm run server:build",
@@ -49,7 +51,8 @@
     "server:build": "NODE_ENV=production webpack --config  ./webpack/webpack.server.config.js",
     "prod:start": "node ./dist/server/app.js",
     "fe:watch": "webpack --config  ./webpack/webpack.dev.config.js --watch",
-    "svr:watch": "node ./webpack/scripts/svr-code-watch.js"
+    "svr:watch": "node ./webpack/scripts/svr-code-watch.js",
+    "wds:watch": "BABEL_ENV=development node ./webpack/scripts/wds-start.js"
   },
   "keywords": [],
   "author": "",
