--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-env": "^6.0.3",
     "css-loader": "^3.5.3",
     "file-loader": "^6.0.0",
+    "isomorphic-style-loader": "^5.1.0",
     "koa-static": "^5.0.0",
     "koa2": "^2.0.0-alpha.7",
     "mini-css-extract-plugin": "^0.9.0",
