--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "koa-static": "^5.0.0",
     "koa2": "^2.0.0-alpha.7",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pm2": "^4.4.0",
@@ -29,19 +28,23 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
     "supervisor": "^0.12.0",
     "uglifyjs-webpack-plugin": "1",
-    "webpack": "^4.41.2",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-manifest-plugin": "^2.2.0",
     "webpack-node-externals": "^1.7.2",
     "xl_close_port": "^1.0.1"
   },
   "devDependencies": {
+    "node-sass": "^4.14.1",
     "react-hot-loader": "^4.12.21",
     "webpack-dev-server": "^3.10.3"
   },
